about/resource-validation/test-resources/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: faults-routeoption-test
spec:
  concurrent: false
  timeouts:
    exec: 60s
  steps:  
  - try:
    - assert:
        resource:
          ($values.glooVersion != null): true
    - assert:
        resource:
          ($values.glooLicense != null): true
  - try:
    - script:
        env:
        - name: GLOO_VERSION
          value: ($values.glooVersion)
        - name: GLOO_GATEWAY_LICENSE_KEY
          value: ($values.glooLicense)
        content: |
          bash ../common/scripts/enable-strict-resource-validation.sh
  - try:
    - script:
        content: |
          kubectl apply -n httpbin -f- <<EOF
          apiVersion: gateway.solo.io/v1
          kind: RouteOption
          metadata:
            name: faults
            namespace: httpbin
          spec:
            options:
              faults:
                abort:
                  percentage: 50
                  # httpStatus: 503
          EOF
        check:
          (contains($stderr, 'Error from server')): true 
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: faults-routeoption-dryrun-test
spec:
  concurrent: false
  steps:
  - try:
    - apply:
        dryRun: true
        resource:
          apiVersion: gateway.solo.io/v1
          kind: RouteOption
          metadata:
            name: faults
            namespace: httpbin
          spec:
            options:
              faults:
                abort:
                  percentage: 50
        expect:
        - check:
            ($error != null): true
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-retries-test
spec:
  concurrent: false
  steps:
  - try:
    - apply:
        dryRun: true
        resource:
          apiVersion: gateway.solo.io/v1
          kind: VirtualHostOption
          metadata:
            name: bad-retries
          spec:
            targetRefs:
            - group: gateway.networking.k8s.io
              kind: Gateway
              name: http
              sectionName: http
            options:
              retries:
                retryOn: "5xx"
                retryBackOff:
                  # An error is expected when the baseInterval is greater than the maxInterval
                  baseInterval: "1s"
                  maxInterval: "1ms"
        expect:
        - check:
            ($error != null): true
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: curl-faults-routeoption-test
spec:
  concurrent: false
  steps:
  - try:
    - script:
        content: |
          kubectl exec deploy/netshoot -n default -- curl -k -XPOST -d '{"request":{"uid":"1234","kind":{"group":"gateway.solo.io","version":"v1","kind":"RouteOption"},"resource":{"group":"","version":"","resource":""},"name":"faults","namespace":"httpbin","operation":"CREATE","userInfo":{},"object": { "apiVersion": "gateway.solo.io/v1", "kind": "RouteOption", "metadata": { "name": "faults", "namespace": "httpbin" }, "spec": { "options": { "faults": { "abort": { "percentage": "50" } }}}}}}' -s h [...]
        outputs:
        - name: returnbody
          value: (json_parse($stdout))
    - assert:
        resource:
          ($returnbody): 
            response:
              allowed: false
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: curl-fixed-faults-routeoption-test
spec:
  concurrent: false
  steps:
  - try:
    - script:
        content: |
          kubectl exec deploy/netshoot -n default -- curl -k -XPOST -d '{"request":{"uid":"1234","kind":{"group":"gateway.solo.io","version":"v1","kind":"RouteOption"},"resource":{"group":"","version":"","resource":""},"name":"faults","namespace":"httpbin","operation":"CREATE","userInfo":{},"object": { "apiVersion": "gateway.solo.io/v1", "kind": "RouteOption", "metadata": { "name": "faults", "namespace": "httpbin" }, "spec": { "options": { "faults": { "abort": { "percentage": "50", "httpStatus": [...]
        outputs:
        - name: returnbody
          value: (json_parse($stdout))
    - assert:
        resource:
          ($returnbody): 
            response:
              allowed: true
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: curl-bad-retries-test
spec:
  concurrent: false
  steps:
  - try:
    - script:
        content: |
          kubectl exec deploy/netshoot -n default -- curl -k -XPOST -d '{"request":{"uid":"1234","kind":{"group":"gateway.solo.io","version":"v1","kind":"VirtualHostOption"},"resource":{"group":"","version":"","resource":""},"name":"bad-retries","namespace":"httpbin","operation":"CREATE","userInfo":{},"object": { "apiVersion": "gateway.solo.io/v1", "kind": "VirtualHostOption", "metadata": { "name": "bad-retries", "namespace": "httpbin" }, "spec": { "targetRefs": [{ "group": "gateway.networking.k [...]
        outputs:
        - name: returnbody
          value: (json_parse($stdout))
    - assert:
        resource:
          ($returnbody): 
            response:
              allowed: false
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: curl-missingunit-bad-retries-test
spec:
  concurrent: false
  steps:
  - try:
    - script:
        content: |
          kubectl exec deploy/netshoot -n default -- curl -k -XPOST -d '{"request":{"uid":"1234","kind":{"group":"gateway.solo.io","version":"v1","kind":"VirtualHostOption"},"resource":{"group":"","version":"","resource":""},"name":"bad-retries","namespace":"httpbin","operation":"CREATE","userInfo":{},"object": { "apiVersion": "gateway.solo.io/v1", "kind": "VirtualHostOption", "metadata": { "name": "bad-retries", "namespace": "httpbin" }, "spec": { "targetRefs": [{ "group": "gateway.networking.k [...]
        outputs:
        - name: returnbody
          value: (json_parse($stdout))
    - assert:
        resource:
          ($returnbody): 
            response:
              allowed: false
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: curl-fixed-bad-retries-test
spec:
  concurrent: false
  steps:
  - try:
    - script:
        content: |
          kubectl exec deploy/netshoot -n default -- curl -k -XPOST -d '{"request":{"uid":"1234","kind":{"group":"gateway.solo.io","version":"v1","kind":"VirtualHostOption"},"resource":{"group":"","version":"","resource":""},"name":"bad-retries","namespace":"httpbin","operation":"CREATE","userInfo":{},"object": { "apiVersion": "gateway.solo.io/v1", "kind": "VirtualHostOption", "metadata": { "name": "bad-retries", "namespace": "httpbin" }, "spec": { "targetRefs": [{ "group": "gateway.networking.k [...]
        outputs:
        - name: returnbody
          value: (json_parse($stdout))
    - assert:
        resource:
          ($returnbody): 
            response:
              allowed: true
